更新 di-22.3-jie-ru-he-can-yu-freebsd-xie-zuo.md

--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.3-jie-ru-he-can-yu-freebsd-xie-zuo.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.3-jie-ru-he-can-yu-freebsd-xie-zuo.md
@@ -55,7 +55,9 @@ diff 是不会被认为是修改所产生文件的，下次 diff 时也不需要
 
 以上适用于 FreeBSD doc src 与 ports，还有少部分是在 github 上操作的，比如季刊报告。
 
-**这与封闭的 Linux 内核开发不同，任何人都可以参与修改 FreeBSD 的源代码。Linux 内核开发是需要发邮件给 Linux 内核中一个脚本执行的结果产生的邮件名单的，需要有人接受才可以。**
+>**技巧**
+>
+>与封闭的 Linux 内核开发不同，任何人都可以参与修改 FreeBSD 的源代码。Linux 内核开发是需要发邮件给 Linux 内核中一个脚本执行的结果产生的邮件名单的，需要有人接受才可以。
 
 一些可能用得到的命令：
 
