更新 di-16.5-jie-wildfly.md

--- a/di-16-zhang-fu-wu-qi/di-16.5-jie-wildfly.md
+++ b/di-16-zhang-fu-wu-qi/di-16.5-jie-wildfly.md
@@ -2,8 +2,7 @@
 
 ## 安装
 
-> 目前在 Ports 中提供了 wildfly10、wildfly11、wildfly12、wildfly13、wildfly14、wildfly15、wildfly16、wildfly17、wildfly18、wildfly24、wildfly25、wildfly26 等多个版本，具体参见 <https://www.freshports.org/java/wildfly>。
-
+> 目前在 Ports 中提供了多个 wildfly 多个版本，具体参见 <https://www.freshports.org/java/wildfly>。
 
 
 ## 配置
