删除冗余，改正过时内容 (#264)
* 更新 di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md

* 更新 di-27.3-jie-huan-yuan-yu-bao-guan-li-qi.md

* 更新 di-27.3-jie-huan-yuan-yu-bao-guan-li-qi.md

* 更新 di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md

* 更新 di-27.2-jie-an-zhuang-yu-pei-zhi.md

* 更新 di-27.2-jie-an-zhuang-yu-pei-zhi.md

* 更新 README.md

* 更新 di-22.13-jie-nodejs-xiang-guan.md

* 更新 di-22.3-jie-ru-he-can-yu-freebsd-xie-zuo.md

* 更新 README.md

* 更新 di-16.5-jie-wildfly.md

* 更新 README.md

* 更新 di-22.13-jie-nodejs-xiang-guan.md

--- a/di-27-zhang-netbsd/di-27.2-jie-an-zhuang-yu-pei-zhi.md
+++ b/di-27-zhang-netbsd/di-27.2-jie-an-zhuang-yu-pei-zhi.md
@@ -2,7 +2,7 @@
 
 ## 下载
 
-下载地址：<https://cdn.netbsd.org/pub/NetBSD/NetBSD-9.3/images/NetBSD-9.3-amd64.iso>（虚拟机），<https://cdn.netbsd.org/pub/NetBSD/NetBSD-9.3/images/NetBSD-9.3-amd64-install.img.gz>（物理机）
+下载地址：<https://cdn.netbsd.org/pub/NetBSD/NetBSD-10.1/images/NetBSD-10.1-amd64.iso>（虚拟机），<https://cdn.netbsd.org/pub/NetBSD/NetBSD-10.1/images/NetBSD-10.1-amd64-install.img.gz>（物理机）
 
 ## 安装图解
 
