--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.13-jie-nodejs-xiang-guan.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.13-jie-nodejs-xiang-guan.md
@@ -43,7 +43,7 @@ pkg 安装的二进制 `nodejs` 依赖 `/lib/libcrypto.so.xxx`，即某个特定
 
 ## 故障排除与未竟事宜
 
-- 如果你跳过了 FreeBSD 基本系统的更新而直接安装软件，那么在 FreeBSD 上，你将有可能遇到以下错误：
+- 如果你跳过了 FreeBSD 基本系统的更新（`freebsd-update fetch install`）而直接安装软件，那么在 FreeBSD 上，你将有可能遇到以下错误：
 
 ```sh
 # pkg install yarn
