--- a/di-27-zhang-netbsd/di-27.2-jie-an-zhuang-yu-pei-zhi.md
+++ b/di-27-zhang-netbsd/di-27.2-jie-an-zhuang-yu-pei-zhi.md
@@ -83,5 +83,46 @@
 
 ![install NetBSD](../.gitbook/assets/nb19.png)
 
-重启系统。
+![install NetBSD](../.gitbook/assets/nb20.png)
 
+![install NetBSD](../.gitbook/assets/nb21.png)
+
+![install NetBSD](../.gitbook/assets/nb22.png)
+
+![install NetBSD](../.gitbook/assets/nb23.png)
+
+
+![install NetBSD](../.gitbook/assets/nb24.png)
+
+![install NetBSD](../.gitbook/assets/nb25.png)
+
+![install NetBSD](../.gitbook/assets/nb26.png)
+
+![install NetBSD](../.gitbook/assets/nb27.png)
+
+
+![install NetBSD](../.gitbook/assets/nb28.png)
+
+![install NetBSD](../.gitbook/assets/nb29.png)
+
+![install NetBSD](../.gitbook/assets/nb30.png)
+
+![install NetBSD](../.gitbook/assets/nb31.png)
+
+![install NetBSD](../.gitbook/assets/nb30.png)
+
+![install NetBSD](../.gitbook/assets/nb32.png)
+
+![install NetBSD](../.gitbook/assets/nb33.png)
+
+![install NetBSD](../.gitbook/assets/nb34.png)
+
+![install NetBSD](../.gitbook/assets/nb35.png)
+
+![install NetBSD](../.gitbook/assets/nb36.png)
+
+![install NetBSD](../.gitbook/assets/nb37.png)
+
+![install NetBSD](../.gitbook/assets/nb38.png)
+
+![install NetBSD](../.gitbook/assets/nb39.png)
