--- a/di-27-zhang-netbsd/di-27.2-jie-an-zhuang-yu-pei-zhi.md
+++ b/di-27-zhang-netbsd/di-27.2-jie-an-zhuang-yu-pei-zhi.md
@@ -8,74 +8,77 @@
 
 以下示例为使用 `NetBSD-9.3-amd64.iso` 进行的 UEFI+GPT 安装。
 
+回车启动系统。在几串数字这里可能会卡上几分钟。
+
 ![install NetBSD](../.gitbook/assets/nb1.png)
 
-回车启动系统。
+回车选择英文安装。
 
 ![install NetBSD](../.gitbook/assets/nb2.png)
 
-回车选择安装。
+保持键盘默认值即可。回车。
 
 ![install NetBSD](../.gitbook/assets/nb3.png)
 
-保持键盘默认值即可。回车。
+选择安装到硬盘上。回车。
 
 ![install NetBSD](../.gitbook/assets/nb4.png)
 
-选择安装到磁盘上。回车。
+开始分区，选择 `Yes` 回车。
 
 ![install NetBSD](../.gitbook/assets/nb5.png)
 
-开始分区，选择 `Yes` 回车。
+选择要安装 NetBSD 的硬盘。
 
 ![install NetBSD](../.gitbook/assets/nb6.png)
 
 
-选择要安装 NetBSD 的硬盘。
+使用 GPT 分区。
 
 ![install NetBSD](../.gitbook/assets/nb7.png)
 
-使用 GPT 分区。
+设置分区大小。回车。
 
 ![install NetBSD](../.gitbook/assets/nb8.png)
 
-回车。
+确认分区大小设置，回车。
 
 ![install NetBSD](../.gitbook/assets/nb9.png)
 
-回车。
+确认分区大小设置，回车。
 
 ![install NetBSD](../.gitbook/assets/nb10.png)
 
-回车。
+确认写入硬盘，选择 OK 后回车。
 
 ![install NetBSD](../.gitbook/assets/nb11.png)
 
-选择 OK 后回车。
+选择默认的完全安装，回车。
 
 ![install NetBSD](../.gitbook/assets/nb12.png)
 
-选择 Yes 后回车。
+选择安装源，我们选 DVD，回车。
 
 ![install NetBSD](../.gitbook/assets/nb13.png)
 
-选择默认的完全安装，回车。
+开始安装……等待。
 
 ![install NetBSD](../.gitbook/assets/nb14.png)
 
-回车。
+回车以继续。
 
-![install NetBSD](../.gitbook/assets/nb15.png)
-
-等待。
 
 ![install NetBSD](../.gitbook/assets/nb16.png)
 
-回车。
+设置 `root` 用户密码。
 
 ![install NetBSD](../.gitbook/assets/nb17.png)
 
-**注意箭头所指的选项要进行自己的设置。**
+接下来要逐一进行配置：
+
+![install NetBSD](../.gitbook/assets/nb37.png)
+
+
 
 ![install NetBSD](../.gitbook/assets/nb18.png)
 
