--- a/di-27-zhang-netbsd/di-27.2-jie-an-zhuang-yu-pei-zhi.md
+++ b/di-27-zhang-netbsd/di-27.2-jie-an-zhuang-yu-pei-zhi.md
@@ -78,54 +78,97 @@
 
 ![install NetBSD](../.gitbook/assets/nb37.png)
 
-
+首先配置 `a`，网络。选择网卡：
 
 ![install NetBSD](../.gitbook/assets/nb18.png)
 
-回车。
-
-![install NetBSD](../.gitbook/assets/nb19.png)
+使用自动配置。
 
 ![install NetBSD](../.gitbook/assets/nb20.png)
 
+确认使用自动配置。
+
 ![install NetBSD](../.gitbook/assets/nb21.png)
+
+输入主机名和 DNS 域：
 
 ![install NetBSD](../.gitbook/assets/nb22.png)
 
+看起来正常吗？Yes！
+
 ![install NetBSD](../.gitbook/assets/nb23.png)
 
+确认配置，写入系统。
 
 ![install NetBSD](../.gitbook/assets/nb24.png)
 
+配置 `b` 时区。选择 `Asia`（亚洲）
+
 ![install NetBSD](../.gitbook/assets/nb25.png)
+
+选择 `Asia/Shanghai`（上海）
 
 ![install NetBSD](../.gitbook/assets/nb26.png)
 
+确认后，回车退出（Exit）该界面。
+
 ![install NetBSD](../.gitbook/assets/nb27.png)
 
-
-![install NetBSD](../.gitbook/assets/nb28.png)
+配置 `e`，安装 `pkgin` 包管理器。直接按回车键。
 
 ![install NetBSD](../.gitbook/assets/nb29.png)
 
+开始安装……
+
 ![install NetBSD](../.gitbook/assets/nb30.png)
+
+安装完毕，按回车退出该界面。
 
 ![install NetBSD](../.gitbook/assets/nb31.png)
 
-![install NetBSD](../.gitbook/assets/nb30.png)
+配置 `f`，安装 `pkgsrc` 包管理器。直接按回车键安装。
 
 ![install NetBSD](../.gitbook/assets/nb32.png)
 
+等待安装……
+
 ![install NetBSD](../.gitbook/assets/nb33.png)
+
+配置 `o` 添加普通用户。输入用户名后回车，然后输入按回车加入 `wheel` 组。
 
 ![install NetBSD](../.gitbook/assets/nb34.png)
 
+选择用户 shell。
+
 ![install NetBSD](../.gitbook/assets/nb35.png)
+
+设置用户密码。
 
 ![install NetBSD](../.gitbook/assets/nb36.png)
 
+配置：
+
+- `g`：sshd 远程服务
+- `h`：打开时间同步
+- `i`：开机校对时间
+- `j`：mDNS
+- `k`：xdm 图形界面
+- `l`：磁盘加密模块
+- `m`：LVM（logical volume management）逻辑卷管理器
+- `n`：软 RAID
+
+请根据需要开启。
+
 ![install NetBSD](../.gitbook/assets/nb37.png)
 
+结束安装。
+
 ![install NetBSD](../.gitbook/assets/nb38.png)
+
+卸载磁盘。
+
+>**警告**
+>
+>不能强制重启，否则你还得重装一遍。引导压根没写进去……
 
 ![install NetBSD](../.gitbook/assets/nb39.png)
