--- a/di-27-zhang-netbsd/di-27.2-jie-an-zhuang-yu-pei-zhi.md
+++ b/di-27-zhang-netbsd/di-27.2-jie-an-zhuang-yu-pei-zhi.md
@@ -151,11 +151,11 @@
 - `g`：sshd 远程服务
 - `h`：打开时间同步
 - `i`：开机校对时间
-- `j`：mDNS
+- `j`：mDNS **最好禁用，否则难以完成安装**
 - `k`：xdm 图形界面
-- `l`：磁盘加密模块
-- `m`：LVM（logical volume management）逻辑卷管理器
-- `n`：软 RAID
+- `l`：磁盘加密模块。**最好禁用，否则难以完成安装**
+- `m`：LVM（logical volume management）逻辑卷管理器 **最好禁用，否则难以完成安装**
+- `n`：软 RAID。**最好禁用，否则难以完成安装**
 
 请根据需要开启。
 
@@ -165,10 +165,16 @@
 
 ![install NetBSD](../.gitbook/assets/nb38.png)
 
-卸载磁盘。
+会退出到命令行界面，然后输入命令 `reboot` 重启即可。
 
->**警告**
->
->不能强制重启，否则你还得重装一遍。引导压根没写进去……
+这里仍然会卡上一会。
 
 ![install NetBSD](../.gitbook/assets/nb39.png)
+
+输入用户名和密码登录系统：
+
+![install NetBSD](../.gitbook/assets/nb40.png)
+
+初始 xdm 系统界面：
+
+![install NetBSD](../.gitbook/assets/nb41.png)
