--- a/di-27-zhang-netbsd/di-27.2-jie-an-zhuang-yu-pei-zhi.md
+++ b/di-27-zhang-netbsd/di-27.2-jie-an-zhuang-yu-pei-zhi.md
@@ -74,9 +74,13 @@
 
 ![install NetBSD](../.gitbook/assets/nb17.png)
 
-接下来要逐一进行配置：
+接下来要逐一进行配置
 
-![install NetBSD](../.gitbook/assets/nb37.png)
+>**警告**
+>
+>下面的界面是默认设置，我们需要改。而不要照着做！
+
+![install NetBSD](../.gitbook/assets/nb17-2.png)
 
 首先配置 `a`，网络。选择网卡：
 
@@ -158,6 +162,10 @@
 - `n`：软 RAID。**最好禁用，否则难以完成安装**
 
 请根据需要开启。
+
+>**警告**
+>
+>下面的界面是完成的配置，如果不照着做，你大概率会卡在卸载 DVD 这一步。
 
 ![install NetBSD](../.gitbook/assets/nb37.png)
 
