--- a/di-27-zhang-netbsd/di-27.2-jie-an-zhuang-yu-pei-zhi.md
+++ b/di-27-zhang-netbsd/di-27.2-jie-an-zhuang-yu-pei-zhi.md
@@ -165,7 +165,7 @@
 
 >**警告**
 >
->下面的界面是完成的配置，如果不照着做，你大概率会卡在卸载 DVD 这一步。
+>下面的界面是完成的配置，如果不照着做，你大概率会卡在卸载 DVD 这一步，然后重启会掉引导。如果取消上述这些设置，则可顺利强制重启。
 
 ![install NetBSD](../.gitbook/assets/nb37.png)
 
@@ -185,3 +185,7 @@
 初始 xdm 系统界面：
 
 ![install NetBSD](../.gitbook/assets/nb41.png)
+
+## 故障排除与未竟事项
+
+- 影响安装的原因究竟是什么？看起来 IDE 硬盘或者少 CPU 数量都不存在类似问题。
