--- a/di-27-zhang-netbsd/di-27.2-jie-an-zhuang-yu-pei-zhi.md
+++ b/di-27-zhang-netbsd/di-27.2-jie-an-zhuang-yu-pei-zhi.md
@@ -94,7 +94,7 @@
 
 ![install NetBSD](../.gitbook/assets/nb21.png)
 
-输入主机名和 DNS 域：
+输入主机名和 DNS 域名：
 
 ![install NetBSD](../.gitbook/assets/nb22.png)
 
