“第 27.2 节 NetBSD 安装图解”更新至 10.1 (#265)
* 补图

* Update di-27.2-jie-an-zhuang-yu-pei-zhi.md

* Delete nb15.png

* Update di-27.2-jie-an-zhuang-yu-pei-zhi.md

* Delete nb19.png

* Delete nb28.png

* Delete nb30.png

* Update di-27.2-jie-an-zhuang-yu-pei-zhi.md

* Create nb30.png

* Update README.md

* Update CHANGELOG.md

* Update CHANGELOG.md

* 补图

* Update di-27.2-jie-an-zhuang-yu-pei-zhi.md

* 补图

* Update di-27.2-jie-an-zhuang-yu-pei-zhi.md

* Update di-27.2-jie-an-zhuang-yu-pei-zhi.md

* Update di-27.2-jie-an-zhuang-yu-pei-zhi.md

* Update di-27-zhang-netbsd/di-27.2-jie-an-zhuang-yu-pei-zhi.md

Co-authored-by: sourcery-ai[bot] <58596630+sourcery-ai[bot]@users.noreply.github.com>

---------

Co-authored-by: sourcery-ai[bot] <58596630+sourcery-ai[bot]@users.noreply.github.com>

--- a/di-27-zhang-netbsd/di-27.2-jie-an-zhuang-yu-pei-zhi.md
+++ b/di-27-zhang-netbsd/di-27.2-jie-an-zhuang-yu-pei-zhi.md
@@ -8,80 +8,184 @@
 
 以下示例为使用 `NetBSD-9.3-amd64.iso` 进行的 UEFI+GPT 安装。
 
+回车启动系统。在几串数字这里可能会卡上几分钟。
+
 ![install NetBSD](../.gitbook/assets/nb1.png)
 
-回车启动系统。
+回车选择英文安装。
 
 ![install NetBSD](../.gitbook/assets/nb2.png)
 
-回车选择安装。
+保持键盘默认值即可。回车。
 
 ![install NetBSD](../.gitbook/assets/nb3.png)
 
-保持键盘默认值即可。回车。
+选择安装到硬盘上。回车。
 
 ![install NetBSD](../.gitbook/assets/nb4.png)
 
-选择安装到磁盘上。回车。
+开始分区，选择 `Yes` 回车。
 
 ![install NetBSD](../.gitbook/assets/nb5.png)
 
-开始分区，选择 `Yes` 回车。
+选择要安装 NetBSD 的硬盘。
 
 ![install NetBSD](../.gitbook/assets/nb6.png)
 
 
-选择要安装 NetBSD 的硬盘。
+使用 GPT 分区。
 
 ![install NetBSD](../.gitbook/assets/nb7.png)
 
-使用 GPT 分区。
+设置分区大小。回车。
 
 ![install NetBSD](../.gitbook/assets/nb8.png)
 
-回车。
+确认分区大小设置，回车。
 
 ![install NetBSD](../.gitbook/assets/nb9.png)
 
-回车。
+确认分区大小设置，回车。
 
 ![install NetBSD](../.gitbook/assets/nb10.png)
 
-回车。
+确认写入硬盘，选择 OK 后回车。
 
 ![install NetBSD](../.gitbook/assets/nb11.png)
 
-选择 OK 后回车。
+选择默认的完全安装，回车。
 
 ![install NetBSD](../.gitbook/assets/nb12.png)
 
-选择 Yes 后回车。
+选择安装源，我们选 DVD，回车。
 
 ![install NetBSD](../.gitbook/assets/nb13.png)
 
-选择默认的完全安装，回车。
+开始安装……等待。
 
 ![install NetBSD](../.gitbook/assets/nb14.png)
 
-回车。
+回车以继续。
 
-![install NetBSD](../.gitbook/assets/nb15.png)
-
-等待。
 
 ![install NetBSD](../.gitbook/assets/nb16.png)
 
-回车。
+设置 `root` 用户密码。
 
 ![install NetBSD](../.gitbook/assets/nb17.png)
 
-**注意箭头所指的选项要进行自己的设置。**
+接下来要逐一进行配置
+
+>**警告**
+>
+>下面的界面是默认设置，我们需要改。而不要照着做！
+
+![install NetBSD](../.gitbook/assets/nb17-2.png)
+
+首先配置 `a`，网络。选择网卡：
 
 ![install NetBSD](../.gitbook/assets/nb18.png)
 
-回车。
+使用自动配置。
 
-![install NetBSD](../.gitbook/assets/nb19.png)
+![install NetBSD](../.gitbook/assets/nb20.png)
 
-重启系统。
+确认使用自动配置。
 
+![install NetBSD](../.gitbook/assets/nb21.png)
+
+输入主机名和 DNS 域名：
+
+![install NetBSD](../.gitbook/assets/nb22.png)
+
+看起来正常吗？Yes！
+
+![install NetBSD](../.gitbook/assets/nb23.png)
+
+确认配置，写入系统。
+
+![install NetBSD](../.gitbook/assets/nb24.png)
+
+配置 `b` 时区。选择 `Asia`（亚洲）
+
+![install NetBSD](../.gitbook/assets/nb25.png)
+
+选择 `Asia/Shanghai`（上海）
+
+![install NetBSD](../.gitbook/assets/nb26.png)
+
+确认后，回车退出（Exit）该界面。
+
+![install NetBSD](../.gitbook/assets/nb27.png)
+
+配置 `e`，安装 `pkgin` 包管理器。直接按回车键。
+
+![install NetBSD](../.gitbook/assets/nb29.png)
+
+开始安装……
+
+![install NetBSD](../.gitbook/assets/nb30.png)
+
+安装完毕，按回车退出该界面。
+
+![install NetBSD](../.gitbook/assets/nb31.png)
+
+配置 `f`，安装 `pkgsrc` 包管理器。直接按回车键安装。
+
+![install NetBSD](../.gitbook/assets/nb32.png)
+
+等待安装……
+
+![install NetBSD](../.gitbook/assets/nb33.png)
+
+配置 `o` 添加普通用户。输入用户名后回车，然后输入按回车加入 `wheel` 组。
+
+![install NetBSD](../.gitbook/assets/nb34.png)
+
+选择用户 shell。
+
+![install NetBSD](../.gitbook/assets/nb35.png)
+
+设置用户密码。
+
+![install NetBSD](../.gitbook/assets/nb36.png)
+
+配置：
+
+- `g`：sshd 远程服务
+- `h`：打开时间同步
+- `i`：开机校对时间
+- `j`：mDNS **最好禁用，否则难以完成安装**
+- `k`：xdm 图形界面
+- `l`：磁盘加密模块。**最好禁用，否则难以完成安装**
+- `m`：LVM（logical volume management）逻辑卷管理器 **最好禁用，否则难以完成安装**
+- `n`：软 RAID。**最好禁用，否则难以完成安装**
+
+请根据需要开启。
+
+>**警告**
+>
+>下面的界面是完成的配置，如果不照着做，你大概率会卡在卸载 DVD 这一步，然后重启会掉引导。如果取消上述这些设置，则可顺利强制重启。
+
+![install NetBSD](../.gitbook/assets/nb37.png)
+
+结束安装。
+
+![install NetBSD](../.gitbook/assets/nb38.png)
+
+
+这里仍然会卡上一会。
+
+![install NetBSD](../.gitbook/assets/nb39.png)
+
+输入用户名和密码登录系统：
+
+![install NetBSD](../.gitbook/assets/nb40.png)
+
+初始 xdm 系统界面：
+
+![install NetBSD](../.gitbook/assets/nb41.png)
+
+## 故障排除与未竟事项
+
+- 影响安装的原因究竟是什么？看起来 IDE 硬盘或者少 CPU 数量都不存在类似问题。
