--- a/di-27-zhang-netbsd/di-27.2-jie-an-zhuang-yu-pei-zhi.md
+++ b/di-27-zhang-netbsd/di-27.2-jie-an-zhuang-yu-pei-zhi.md
@@ -173,6 +173,9 @@
 
 ![install NetBSD](../.gitbook/assets/nb38.png)
 
+输入 `reboot` 可重启。
+
+![install NetBSD](../.gitbook/assets/nb38-2.png)
 
 这里仍然会卡上一会。
 
@@ -188,4 +191,4 @@
 
 ## 故障排除与未竟事项
 
-- 影响安装的原因究竟是什么？看起来 IDE 硬盘或者少 CPU 数量都不存在类似问题。
+- 影响安装的原因究竟是什么？看起来 IDE 硬盘或者少 CPU 数量都不存在类似问题。似乎不能指定的 CPU 数量等于 16。
