--- a/di-27-zhang-netbsd/di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
+++ b/di-27-zhang-netbsd/di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
@@ -17,7 +17,9 @@ NetBSD 可以使用常见的桌面，如 KDE 4、GNOME。自带了 xorg，不需
 # ln  ~/.xinitrc  ~/.xsession
 ```
 
-参考文献：[HOWTO install the XFCE 4 Desktop on NetBSD 8.1](https://slice2.com/2019/09/21/howto-install-the-xfce-4-desktop-on-netbsd-8-1/?amp=1)
+### 参考文献
+
+- [HOWTO install the XFCE 4 Desktop on NetBSD 8.1](https://slice2.com/2019/09/21/howto-install-the-xfce-4-desktop-on-netbsd-8-1/?amp=1)
 
 ## Mate
 
@@ -35,7 +37,9 @@ NetBSD 可以使用常见的桌面，如 KDE 4、GNOME。自带了 xorg，不需
 ```
 
 
-参考文献：[成功尝试在 NetBSD9.0 中安装 Mate 桌面环境](https://www.bilibili.com/read/cv17144331)
+### 参考文献
+
+- [成功尝试在 NetBSD9.0 中安装 Mate 桌面环境](https://www.bilibili.com/read/cv17144331)
 
 ## KDE 4
 
@@ -81,7 +85,7 @@ AllowRootLogin=true
 
 
 
-## 参考文献
+### 参考文献
 
 - [NetBSD Wiki/GNOME](https://wiki.netbsd.org/GNOME/)
 - [How can I start kde5 in netBSD9 ?](https://www.unix.com/unix-for-beginners-questions-and-answers/283891-how-can-i-start-kde5-netbsd9.html)
