--- a/di-27-zhang-netbsd/di-27.3-jie-huan-yuan-yu-bao-guan-li-qi.md
+++ b/di-27-zhang-netbsd/di-27.3-jie-huan-yuan-yu-bao-guan-li-qi.md
@@ -1,7 +1,7 @@
 # 第 27.3 节 NetBSD 换源与包管理器
 
 
-NetBSD 的包管理器是 pkgsrc，同时支持二进制与源代码编译安装。其二进制命令分别为 pkg_add 与 pkgin。
+NetBSD 的包管理器是 pkgsrc，同时支持二进制与源代码编译安装。其二进制命令分别为 `pkg_*`（如 `pkg_add`） 与 `pkgin`。
 
 以 NetBSD 10.1 为例换二进制源：
 
