--- a/di-27-zhang-netbsd/di-27.3-jie-huan-yuan-yu-bao-guan-li-qi.md
+++ b/di-27-zhang-netbsd/di-27.3-jie-huan-yuan-yu-bao-guan-li-qi.md
@@ -19,6 +19,6 @@ NetBSD 的包管理器是 pkgsrc，同时支持二进制与源代码编译安装
 
 参考文献：
 
-- [pkgsrc](https://www.pkgsrc.org/)
-- [pkgsrc 镜像使用帮助](https://mirrors.tuna.tsinghua.edu.cn/help/pkgsrc/)
-- [pkgsrc 与 IPS](https://nanxiao.me/pkgsrc-ang-ips/)
+- [pkgsrc](https://www.pkgsrc.org/)，官方安装说明
+- [pkgsrc 镜像使用帮助](https://mirrors.tuna.tsinghua.edu.cn/help/pkgsrc/)，换源方式
+- [pkgsrc 与 IPS](https://nanxiao.me/pkgsrc-ang-ips/)，基本常识
