--- a/di-27-zhang-netbsd/di-27.1-jie-gai-shu.md
+++ b/di-27-zhang-netbsd/di-27.1-jie-gai-shu.md
@@ -4,6 +4,8 @@ NetBSD 的[口号](https://www.netbsd.org/about/portability.html)是“Of course
 
 NetBSD [支持多个架构](https://wiki.netbsd.org/ports/)。目前 NetBSD 支持 9 个一级架构、49 个二级架构。使用如此极客的一款操作系统对于用户来说却是一件非常困难的事情，用户几乎也全都是开发者，而开发者也几乎构成了所有的用户。
 
+其开发的 [pkgsrc](https://www.pkgsrc.org/) 包管理器框架也旨在支持 macOS、Linux 等多个系统。
+
 NetBSD 有 Linux 兼容层。
 
 驱动方面自带了 i915 显卡及 AMD 相关驱动，支持 UEFI NVMe。
