--- a/di-27-zhang-netbsd/di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
+++ b/di-27-zhang-netbsd/di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
@@ -4,8 +4,15 @@ NetBSD 可以使用常见的桌面，如 KDE 4、GNOME。自带了 xorg，不需
 
 ## xfce
 
+- 安装：
+
 ```sh
 # pkgin install xfce4 fam slim noto-cjk-fonts
+```
+
+- 配置：
+
+```sh
 # cp /usr/pkg/share/examples/rc.d/famd /etc/rc.d/
 # cp /usr/pkg/share/examples/rc.d/dbus /etc/rc.d/
 # cp /usr/pkg/share/examples/rc.d/slim /etc/rc.d/
@@ -13,8 +20,8 @@ NetBSD 可以使用常见的桌面，如 KDE 4、GNOME。自带了 xorg，不需
 # echo famd=YES >> /etc/rc.conf
 # echo dbus=YES >> /etc/rc.conf
 # echo slim=YES >> /etc/rc.conf
-# echo xfce4-session >> ~/.xinitrc # root 为 /root，下同
-# ln  ~/.xinitrc  ~/.xsession
+$ echo xfce4-session >> ~/.xinitrc
+$ ln  ~/.xinitrc  ~/.xsession
 ```
 
 ### 参考文献
