--- a/di-27-zhang-netbsd/di-27.2-jie-an-zhuang-yu-pei-zhi.md
+++ b/di-27-zhang-netbsd/di-27.2-jie-an-zhuang-yu-pei-zhi.md
@@ -6,7 +6,11 @@
 
 ## 安装图解
 
-以下示例为使用 `NetBSD-10.1-amd64.iso` 进行的 UEFI+GPT 安装。
+以下示例为通过 VMware Workstation Pro 17 使用 `NetBSD-10.1-amd64.iso` 进行的 UEFI+GPT 安装过程。
+
+>**警告**
+>
+>若通过 VMware Workstation Pro 17 虚拟机安装 `NetBSD-10.1-amd64.iso`，不支持 NVMe。会出现卡住、无法卸载 DVD、无法重启等故障。  CPU 数量也不要太多，经测试 4 个 CPU 没有问题。
 
 回车启动系统。在几串数字这里可能会卡上几分钟。
 
@@ -155,23 +159,23 @@
 - `g`：sshd 远程服务
 - `h`：打开时间同步
 - `i`：开机校对时间
-- `j`：mDNS **最好禁用，否则难以完成安装**
+- `j`：mDNS
 - `k`：xdm 图形界面
-- `l`：磁盘加密模块。**最好禁用，否则难以完成安装**
-- `m`：LVM（logical volume management）逻辑卷管理器 **最好禁用，否则难以完成安装**
-- `n`：软 RAID。**最好禁用，否则难以完成安装**
+- `l`：磁盘加密模块。
+- `m`：LVM（logical volume management）逻辑卷管理器 
+- `n`：软 RAID。
 
 请根据需要开启。
-
->**警告**
->
->下面的界面是完成的配置，如果不照着做，你大概率会卡在卸载 DVD 这一步，然后重启会掉引导。如果取消上述这些设置，则可顺利强制重启。
 
 ![install NetBSD](../.gitbook/assets/nb37.png)
 
 结束安装。
 
 ![install NetBSD](../.gitbook/assets/nb38.png)
+
+结束安装。
+
+![install NetBSD](../.gitbook/assets/nb38-1.png)
 
 输入 `reboot` 可重启。
 
