--- a/di-27-zhang-netbsd/di-27.2-jie-an-zhuang-yu-pei-zhi.md
+++ b/di-27-zhang-netbsd/di-27.2-jie-an-zhuang-yu-pei-zhi.md
@@ -6,13 +6,13 @@
 
 ## 安装图解
 
-以下示例为通过 VMware Workstation Pro 17 使用 `NetBSD-10.1-amd64.iso` 进行的 UEFI+GPT 安装过程。
+以下示例为通过 VMware Workstation Pro 17 使用 `NetBSD-10.1-amd64.iso` 进行的 UEFI+GPT+SATA 安装过程。
 
 >**警告**
 >
->若通过 VMware Workstation Pro 17 虚拟机安装 `NetBSD-10.1-amd64.iso`，不支持 NVMe。会出现卡住、无法卸载 DVD、无法重启等故障。  CPU 数量也不要太多，经测试 4 个 CPU 没有问题。
+>若通过 VMware Workstation Pro 17 虚拟机安装 `NetBSD-10.1-amd64.iso`，不支持 NVMe——会出现卡住、无法卸载 DVD、无法重启等故障。  CPU 数量也不要太多，经测试 4 个 CPU 没有问题。
 
-回车启动系统。在几串数字这里可能会卡上几分钟。
+回车启动系统。
 
 ![install NetBSD](../.gitbook/assets/nb1.png)
 
@@ -181,7 +181,7 @@
 
 ![install NetBSD](../.gitbook/assets/nb38-2.png)
 
-这里仍然会卡上一会。
+开机了！
 
 ![install NetBSD](../.gitbook/assets/nb39.png)
 
