--- a/di-27-zhang-netbsd/di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
+++ b/di-27-zhang-netbsd/di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
@@ -7,10 +7,14 @@ NetBSD 可以使用常见的桌面，如 KDE 4、GNOME。自带了 xorg，不需
 - 安装：
 
 ```sh
-# pkgin install xfce4 fam slim noto-cjk-fonts
+# pkgin install xfce4 fam slim noto-cjk-fonts ee
 ```
 
 - 配置：
+
+使用 `ee` 编辑 `/etc/rc.conf`，将 `/etc/rc.conf` 中的 `xdm=YES` 改为 `xdm=NO`。
+
+然后：
 
 ```sh
 # cp /usr/pkg/share/examples/rc.d/famd /etc/rc.d/
