--- a/di-27-zhang-netbsd/di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
+++ b/di-27-zhang-netbsd/di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
@@ -2,6 +2,16 @@
 
 NetBSD 可以使用常见的桌面，如 KDE 4、GNOME。自带了 xorg，不需要单独安装。
 
+## 设置中文环境
+
+创建或编辑  `~/.xinitrc`，用哪个用户登录就 `su` 到哪个用户下修改。在顶部加入：
+
+```sh
+export LANG=zh_CN.UTF-8
+export LC_CTYPE=zh_CN.UTF-8
+export LC_ALL=zh_CN.UTF-8
+```
+
 ## xfce
 
 - 安装：
@@ -27,6 +37,12 @@ NetBSD 可以使用常见的桌面，如 KDE 4、GNOME。自带了 xorg，不需
 $ echo xfce4-session >> ~/.xinitrc
 $ ln  ~/.xinitrc  ~/.xsession
 ```
+
+
+
+启动桌面会比较慢，多等等……
+
+
 
 ### 参考文献
 
