--- a/di-27-zhang-netbsd/di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
+++ b/di-27-zhang-netbsd/di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
@@ -40,9 +40,12 @@ $ ln  ~/.xinitrc  ~/.xsession
 
 
 
-启动桌面会比较慢，多等等……
+启动桌面会比较慢（我这里 4 分钟才能完全加载），多等等……
 
 
+![](../.gitbook/assets/nb-xfce1.png)
+
+![](../.gitbook/assets/nb-xfce2.png)
 
 ### 参考文献
 
