--- a/di-27-zhang-netbsd/di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
+++ b/di-27-zhang-netbsd/di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
@@ -109,6 +109,8 @@ $ ln  ~/.xinitrc  ~/.xsession
 AllowRootLogin=true 
 ```
 
+![install KDE On NetBSD](../.gitbook/assets/nbkde0.png)
+
 ![install KDE On NetBSD](../.gitbook/assets/nbkde1.png)
 
 ![install KDE On NetBSD](../.gitbook/assets/nbkde2.png)
