--- a/di-27-zhang-netbsd/di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
+++ b/di-27-zhang-netbsd/di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
@@ -12,6 +12,26 @@ export LC_CTYPE=zh_CN.UTF-8
 export LC_ALL=zh_CN.UTF-8
 ```
 
+## Fcitx 中文输入法
+
+```sh
+# pkgin install fcitx5 fcitx5-qt fcitx-gtk fcitx5-chinese-addons 
+```
+
+创建或编辑  `~/.xinitrc`，用哪个用户登录就 `su` 到哪个用户下修改。在中文环境变量下面加入：
+
+```sh
+export XMODIFIERS='@im=fcitx'
+export GTK_IM_MODULE=fcitx/xim
+export QT_IM_MODULE=fcitx
+```
+
+创建运行目录：
+
+```sh
+$ mkdir -p ~/.config/fcitx
+```
+
 ## xfce
 
 - 安装：
@@ -38,14 +58,15 @@ $ echo xfce4-session >> ~/.xinitrc
 $ ln  ~/.xinitrc  ~/.xsession
 ```
 
-
-
 启动桌面会比较慢（我这里 4 分钟才能完全加载），多等等……
 
+![](../.gitbook/assets/nb-xfce0.png)
 
 ![](../.gitbook/assets/nb-xfce1.png)
 
 ![](../.gitbook/assets/nb-xfce2.png)
+
+![](../.gitbook/assets/net-fcitx.png)
 
 ### 参考文献
 
@@ -108,8 +129,6 @@ $ ln  ~/.xinitrc  ~/.xsession
 # Default is true
 AllowRootLogin=true 
 ```
-
-![install KDE On NetBSD](../.gitbook/assets/nbkde0.png)
 
 ![install KDE On NetBSD](../.gitbook/assets/nbkde1.png)
 
