更新“桌面与中文环境常用软件” (#268)
* Update di-27.3-jie-huan-yuan-yu-bao-guan-li-qi.md

* Update di-27.3-jie-huan-yuan-yu-bao-guan-li-qi.md

* Update di-27.3-jie-huan-yuan-yu-bao-guan-li-qi.md

* Update di-27.1-jie-gai-shu.md

* Update di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md

* Add files via upload

* Update di-27.2-jie-an-zhuang-yu-pei-zhi.md

* Update di-27.2-jie-an-zhuang-yu-pei-zhi.md

* Update CHANGELOG.md

* Update di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md

* Update di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md

* 补图

* Update di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md

* Create nb-xfce0.png

* Update di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md

* Create net-fcitx.png

* Update di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md

* Update di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md

* Update SUMMARY.md

* 从 SUMMARY.md 更新 mu-lu.md [skip ci]

* Update CHANGELOG.md

---------

Co-authored-by: ykla <10327999+ykla@users.noreply.github.com>

--- a/di-27-zhang-netbsd/di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
+++ b/di-27-zhang-netbsd/di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
@@ -1,11 +1,52 @@
-# 第 27.4 节 桌面与其他软件
+# 第 27.4 节 桌面与中文环境常用软件
 
 NetBSD 可以使用常见的桌面，如 KDE 4、GNOME。自带了 xorg，不需要单独安装。
 
-## xfce
+## 设置中文环境
+
+创建或编辑  `~/.xinitrc`，用哪个用户登录就 `su` 到哪个用户下修改。在顶部加入：
 
 ```sh
-# pkgin install xfce4 fam slim noto-cjk-fonts
+export LANG=zh_CN.UTF-8
+export LC_CTYPE=zh_CN.UTF-8
+export LC_ALL=zh_CN.UTF-8
+```
+
+## Fcitx 中文输入法
+
+```sh
+# pkgin install fcitx5 fcitx5-qt fcitx-gtk fcitx5-chinese-addons 
+```
+
+创建或编辑  `~/.xinitrc`，用哪个用户登录就 `su` 到哪个用户下修改。在中文环境变量下面加入：
+
+```sh
+export XMODIFIERS='@im=fcitx'
+export GTK_IM_MODULE=fcitx/xim
+export QT_IM_MODULE=fcitx
+```
+
+创建运行目录：
+
+```sh
+$ mkdir -p ~/.config/fcitx
+```
+
+## xfce
+
+- 安装：
+
+```sh
+# pkgin install xfce4 fam slim noto-cjk-fonts ee
+```
+
+- 配置：
+
+使用 `ee` 编辑 `/etc/rc.conf`，将 `/etc/rc.conf` 中的 `xdm=YES` 改为 `xdm=NO`。
+
+然后：
+
+```sh
 # cp /usr/pkg/share/examples/rc.d/famd /etc/rc.d/
 # cp /usr/pkg/share/examples/rc.d/dbus /etc/rc.d/
 # cp /usr/pkg/share/examples/rc.d/slim /etc/rc.d/
@@ -13,9 +54,19 @@ NetBSD 可以使用常见的桌面，如 KDE 4、GNOME。自带了 xorg，不需
 # echo famd=YES >> /etc/rc.conf
 # echo dbus=YES >> /etc/rc.conf
 # echo slim=YES >> /etc/rc.conf
-# echo xfce4-session >> ~/.xinitrc # root 为 /root，下同
-# ln  ~/.xinitrc  ~/.xsession
+$ echo xfce4-session >> ~/.xinitrc
+$ ln  ~/.xinitrc  ~/.xsession
 ```
+
+启动桌面会比较慢（我这里 4 分钟才能完全加载），多等等……
+
+![](../.gitbook/assets/nb-xfce0.png)
+
+![](../.gitbook/assets/nb-xfce1.png)
+
+![](../.gitbook/assets/nb-xfce2.png)
+
+![](../.gitbook/assets/net-fcitx.png)
 
 ### 参考文献
 
