--- a/di-27-zhang-netbsd/di-27.3-jie-huan-yuan-yu-bao-guan-li-qi.md
+++ b/di-27-zhang-netbsd/di-27.3-jie-huan-yuan-yu-bao-guan-li-qi.md
@@ -1,12 +1,12 @@
 # 第 27.3 节 NetBSD 换源与包管理器
 
 
-NetBSD 的包管理器是 pkgsrc，同时支持二进制与源代码编译安装。其二进制命令分别为 pkg_add 与 pkgin。
+NetBSD 的包管理器是 pkgsrc，同时支持二进制与源代码编译安装。其二进制命令分别为 `pkg_*`（如 `pkg_add`） 与 `pkgin`。
 
-以 NetBSD 10.0 为例换二进制源：
+以 NetBSD 10.1 为例换二进制源：
 
 ```sh
-echo https://mirrors.nju.edu.cn/pkgsrc/packages/NetBSD/x86_64/10.0_current/All/  > /usr/pkg/etc/pkgin/repositories.epositories.conf
+# echo https://mirrors.nju.edu.cn/pkgsrc/packages/NetBSD/x86_64/10.1/All/  > /usr/pkg/etc/pkgin/repositories.epositories.conf
 ```
 
 需要注意的 NetBSD 的源比较混乱，有时候一个源不能满足要求，要多换几个源看看，换哪个直接谷歌搜索“包名+netbsd.org”，如“kde4 netbsd.org”，点进去诸如 <https://cdn.netbsd.org/pub/pkgsrc/current/pkgsrc/print/libcups/index.html> 域名所提供的。
@@ -14,12 +14,11 @@ echo https://mirrors.nju.edu.cn/pkgsrc/packages/NetBSD/x86_64/10.0_current/All/ 
 经常性的在以下源中进行切换：
 
 ```sh
-# echo http://mirrors.nju.edu.cn/pkgsrc/packages/NetBSD/x86_64/9.0_current/All/  > /usr/pkg/etc/pkgin/repositories.cpositories.conf
-# echo http://mirrors.nju.edu.cn/pkgsrc/packages/NetBSD/x86_64/10.0_2024Q3/All/  > /usr/pkg/etc/pkgin/repositories.conf
+# echo http://mirrors.nju.edu.cn/pkgsrc/packages/NetBSD/x86_64/10.0_2024Q4/All/  > /usr/pkg/etc/pkgin/repositories.conf
 ```
 
 参考文献：
 
-- [pkgsrc](https://www.pkgsrc.org/)
-- [pkgsrc 镜像使用帮助](https://mirrors.tuna.tsinghua.edu.cn/help/pkgsrc/)
-- [pkgsrc 与 IPS](https://nanxiao.me/pkgsrc-ang-ips/)
+- [pkgsrc](https://www.pkgsrc.org/)，官方安装说明
+- [pkgsrc 镜像使用帮助](https://mirrors.tuna.tsinghua.edu.cn/help/pkgsrc/)，换源方式
+- [pkgsrc 与 IPS](https://nanxiao.me/pkgsrc-ang-ips/)，基本常识
