--- a/di-27-zhang-netbsd/di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
+++ b/di-27-zhang-netbsd/di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
@@ -32,7 +32,7 @@ export QT_IM_MODULE=fcitx
 $ mkdir -p ~/.config/fcitx
 ```
 
-## xfce
+## Xfce
 
 - 安装：
 
@@ -42,7 +42,7 @@ $ mkdir -p ~/.config/fcitx
 
 - 配置：
 
-使用 `ee` 编辑 `/etc/rc.conf`，将 `/etc/rc.conf` 中的 `xdm=YES` 改为 `xdm=NO`。
+使用 `ee` 编辑 `/etc/rc.conf`，将 `/etc/rc.conf` 中的 `xdm=YES` 改为 `xdm=NO`。下同。
 
 然后：
 
@@ -72,10 +72,17 @@ $ ln  ~/.xinitrc  ~/.xsession
 
 - [HOWTO install the XFCE 4 Desktop on NetBSD 8.1](https://slice2.com/2019/09/21/howto-install-the-xfce-4-desktop-on-netbsd-8-1/?amp=1)
 
-## Mate
+## MATE
+
+- 安装：
 
 ```sh
 # pkgin install mate-desktop mate slim fam noto-cjk-fonts
+```
+
+- 配置：
+
+```sh
 # cp /usr/pkg/share/examples/rc.d/famd /etc/rc.d/
 # cp /usr/pkg/share/examples/rc.d/dbus /etc/rc.d/
 # cp /usr/pkg/share/examples/rc.d/slim /etc/rc.d/
@@ -83,7 +90,7 @@ $ ln  ~/.xinitrc  ~/.xsession
 # echo famd=YES >> /etc/rc.conf
 # echo dbus=YES >> /etc/rc.conf
 # echo slim=YES >> /etc/rc.conf
-# echo exec mate-session >> ~/.xinitrc # root 为 /root，下同
+# echo exec mate-session >> ~/.xinitrc 
 # ln  ~/.xinitrc  ~/.xsession
 ```
 
@@ -97,7 +104,7 @@ $ ln  ~/.xinitrc  ~/.xsession
 
 >**警告**
 >
->**在 VB VM 下目前无法正常进入桌面，进去就黑屏，已经报告 [NetBSD Problem Report #57554](https://gnats.netbsd.org/cgi-bin/query-pr-single.pl?number=57554)，如果你知道什么原因请告诉我。**
+>**在 VB、VM 下目前无法正常进入桌面，进去就黑屏，已经报告 [NetBSD Problem Report #57554](https://gnats.netbsd.org/cgi-bin/query-pr-single.pl?number=57554)，如果你知道什么原因请告诉我。**
 
 目前没有 kde5。
 
