--- a/di-27-zhang-netbsd/di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
+++ b/di-27-zhang-netbsd/di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
@@ -77,8 +77,12 @@ $ ln  ~/.xinitrc  ~/.xsession
 - 安装：
 
 ```sh
-# pkgin install mate-desktop mate slim fam noto-cjk-fonts
+# pkgin in mate-desktop mate slim fam noto-cjk-fonts
 ```
+
+>**技巧**
+>
+> `pkgin in` 是 `pkgin install` 的缩写。更多缩写可以用单条命令不加参数即 `pkgin` 查看。
 
 - 配置：
 
