--- a/di-27-zhang-netbsd/di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
+++ b/di-27-zhang-netbsd/di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
@@ -32,6 +32,21 @@ export QT_IM_MODULE=fcitx
 $ mkdir -p ~/.config/fcitx
 ```
 
+## ibus 中文输入法
+
+```
+# pkgin install ibus ibus-pinyin
+```
+
+创建或编辑  `~/.xinitrc`，用哪个用户登录就 `su` 到哪个用户下修改。在中文环境变量下面加入：
+
+```sh
+export GTK_IM_MODULE=ibus
+export QT_IM_MODULE=ibus
+export XMODIFIERS=@im=ibus
+ibus-daemon --daemonize --xim
+```
+
 ## Xfce
 
 - 安装：
@@ -77,7 +92,7 @@ $ ln  ~/.xinitrc  ~/.xsession
 - 安装：
 
 ```sh
-# pkgin in mate-desktop mate slim fam noto-cjk-fonts
+# pkgin in mate-desktop mate slim fam noto-cjk-fonts ee
 ```
 
 >**技巧**
@@ -90,14 +105,17 @@ $ ln  ~/.xinitrc  ~/.xsession
 # cp /usr/pkg/share/examples/rc.d/famd /etc/rc.d/
 # cp /usr/pkg/share/examples/rc.d/dbus /etc/rc.d/
 # cp /usr/pkg/share/examples/rc.d/slim /etc/rc.d/
+# cp /usr/pkg/share/examples/rc.d/avahidaemon /etc/rc.d/
 # echo rpcbind=YES >> /etc/rc.conf
 # echo famd=YES >> /etc/rc.conf
 # echo dbus=YES >> /etc/rc.conf
 # echo slim=YES >> /etc/rc.conf
-# echo exec mate-session >> ~/.xinitrc 
-# ln  ~/.xinitrc  ~/.xsession
+# echo avahidaemon=YES >> /etc/rc.conf
+$ echo exec mate-session >> ~/.xinitrc 
+$ ln  ~/.xinitrc  ~/.xsession
 ```
 
+![](../.gitbook/assets/nb-ibus-mate.png)
 
 ### 参考文献
 
