--- a/di-27-zhang-netbsd/di-27.3-jie-huan-yuan-yu-bao-guan-li-qi.md
+++ b/di-27-zhang-netbsd/di-27.3-jie-huan-yuan-yu-bao-guan-li-qi.md
@@ -3,6 +3,8 @@
 
 NetBSD 的包管理器是 pkgsrc，同时支持二进制与源代码编译安装。其二进制命令分别为 `pkg_*`（如 `pkg_add`） 与 `pkgin`。
 
+## 二进制源换源
+
 以 NetBSD 10.1 为例换二进制源：
 
 ```sh
@@ -22,3 +24,20 @@ NetBSD 的包管理器是 pkgsrc，同时支持二进制与源代码编译安装
 - [pkgsrc](https://www.pkgsrc.org/)，官方安装说明
 - [pkgsrc 镜像使用帮助](https://mirrors.tuna.tsinghua.edu.cn/help/pkgsrc/)，换源方式
 - [pkgsrc 与 IPS](https://nanxiao.me/pkgsrc-ang-ips/)，基本常识
+
+## pkgsrc 编译安装
+
+和 FreeBSD 类似：
+
+```sh
+ykla# cd /usr/pkgsrc/meta-pkgs/kde
+ykla# ls
+CVS               Makefile          applications.mk   kf6.mk            plasma6.mk
+DESCR             Makefile.common   kf5.mk            plasma5.mk
+ykla# make install clean
+===> Installing dependencies for kde-20240828
+=> Tool dependency mktools-[0-9]*: NOT found
+=> Verifying reinstall for ../../pkgtools/mktools
+===> Installing dependencies for mktools-20250213
+……省略……
+```
