--- a/di-27-zhang-netbsd/di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
+++ b/di-27-zhang-netbsd/di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
@@ -128,11 +128,15 @@ $ ln  ~/.xinitrc  ~/.xsession
 >
 >**在 VB、VM 下目前无法正常进入桌面，进去就黑屏，已经报告 [NetBSD Problem Report #57554](https://gnats.netbsd.org/cgi-bin/query-pr-single.pl?number=57554)，如果你知道什么原因请告诉我。**
 
-目前没有 kde5。
+- 安装：
 
 ```sh
-# pkgin install readline  libcups 
-# pkgin install kde4 hal  noto-cjk-fonts 
+# pkgin in kde hal noto-cjk-fonts readline libcups ee
+```
+
+- 配置：
+
+```
 # cp /usr/pkg/share/examples/rc.d/* /etc/rc.d
 # echo kdm=YES >> /etc/rc.conf
 # echo hal=YES >> /etc/rc.conf
@@ -146,6 +150,10 @@ $ ln  ~/.xinitrc  ~/.xsession
 默认状态下 root 禁止登录。
 
 ### 开启 kdm root 登录
+
+>**警告**
+>
+>root 登录 GUI 被视为一种非常危险的行为。请确认你知道自己在做什么。
 
 ```sh
 # nano /usr/pkg/etc/kdm/kdmrc
@@ -163,11 +171,28 @@ AllowRootLogin=true
 
 ![install KDE On NetBSD](../.gitbook/assets/nbkde2.png)
 
-
-
 ### 参考文献
 
 - [NetBSD Wiki/GNOME](https://wiki.netbsd.org/GNOME/)
 - [How can I start kde5 in netBSD9 ?](https://www.unix.com/unix-for-beginners-questions-and-answers/283891-how-can-i-start-kde5-netbsd9.html)
 - [Re: How to install KDE on NetBSD?](https://www.mail-archive.com/netbsd-users@netbsd.org/msg13146.html)
+
+## GNOME
+
+- 安装：
+
+```
+# pkgin in gnome gnome-desktop gnome-session
+```
+
+- 配置：
+
+```sh
+# cp /usr/pkg/share/examples/rc.d/* /etc/rc.d
+# echo gdm=YES >> /etc/rc.conf
+# echo hal=YES >> /etc/rc.conf
+# echo avahidaemon=YES >> /etc/rc.conf
+# echo dbus=YES >> /etc/rc.conf
+# echo hostname=ykla >> /etc/rc.conf # 设置主机名，可以替换为你的名字
+```
 
