--- a/di-27-zhang-netbsd/di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
+++ b/di-27-zhang-netbsd/di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
@@ -126,7 +126,7 @@ $ ln  ~/.xinitrc  ~/.xsession
 
 >**警告**
 >
->**在 VB、VM 下目前无法正常进入桌面，进去就黑屏，已经报告 [NetBSD Problem Report #57554](https://gnats.netbsd.org/cgi-bin/query-pr-single.pl?number=57554)，如果你知道什么原因请告诉我。**
+>在 VB、VM 下目前无法正常进入桌面（UEFI），进去就黑屏，已经报告 [NetBSD Problem Report #57554](https://gnats.netbsd.org/cgi-bin/query-pr-single.pl?number=57554)，如果你知道什么原因请告诉我。
 
 - 安装：
 
@@ -196,3 +196,6 @@ AllowRootLogin=true
 # echo hostname=ykla >> /etc/rc.conf # 设置主机名，可以替换为你的名字
 ```
 
+### 参考文献
+
+- [Using NetBSD as a Gnome workstation](https://www.tumfatig.net/2011/using-netbsd-as-a-gnome-workstation/)
