--- a/di-27-zhang-netbsd/di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
+++ b/di-27-zhang-netbsd/di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
@@ -138,10 +138,11 @@ $ ln  ~/.xinitrc  ~/.xsession
 
 ```
 # cp /usr/pkg/share/examples/rc.d/* /etc/rc.d
+# echo dbus=YES >> /etc/rc.conf
 # echo kdm=YES >> /etc/rc.conf
+# echo rpcbind=YES >> /etc/rc.conf
 # echo hal=YES >> /etc/rc.conf
 # echo avahidaemon=YES >> /etc/rc.conf
-# echo dbus=YES >> /etc/rc.conf
 # echo hostname=ykla >> /etc/rc.conf # 设置主机名，可以替换为你的名字
 ```
 
