--- a/di-16-zhang-fu-wu-qi/di-16.5-jie-wildfly.md
+++ b/di-16-zhang-fu-wu-qi/di-16.5-jie-wildfly.md
@@ -2,30 +2,76 @@
 
 ## 安装
 
-> 目前在 Ports 中提供了多个 wildfly 多个版本，具体参见 <https://www.freshports.org/java/wildfly>。
+>**技巧**
+>
+>目前在 Ports 中提供了多个 wildfly 多个版本，具体参见 <https://www.freshports.org/java/wildfly>。
 
+- 使用 pkg 安装：
+
+```sh
+# pkg install wildfly
+```
+
+- 使用 ports 安装：
+
+```sh
+# cd /usr/ports/java/wildfly/ 
+# make install clean
+```
+
+## 查看安装后说明
+
+```sh
+# wildfly-35.0.1:
+# 安装说明如下：
+
+# On install:
+# 安装时：
+
+# To make WildFly bind to all interfaces add this to rc.conf:
+# 若要使 WildFly 绑定到所有网络接口，在 rc.conf 中添加以下内容：
+
+# wildfly_args="-Djboss.bind.address=0.0.0.0"
+
+# See
+# 参见
+
+# https://community.jboss.org/wiki/JBossProperties
+# https://community.jboss.org/wiki/JBossProperties
+
+# for additional startup properties.
+# 以获取更多启动参数说明。
+
+# To change JVM args, edit appropriate standalone.conf.
+# 若要修改 JVM 参数，请编辑相应的 standalone.conf 文件。
+
+# To add the initial admin user:
+# 若要添加初始管理员用户：
+
+# /usr/local/wildfly/bin/add-user.sh
+```
 
 ## 配置
 
-在 `/etc/hosts` 增加以下代码，其中 `server02` 为本机 `hostname`（主机名，安装时设置的）。
+在 `/etc/hosts` 增加以下代码，其中 `ykla` 为本机 `hostname`（主机名，安装时设置的）。
 
 ```sh
-127.0.0.1               server02
+127.0.0.1               ykla
 ```
 
 还需要一些其他设置：
 
 ```sh
-# sysrc wildfly26_enable="yes"
-# sysrc wildfly26_args="-Djboss.bind.address=0.0.0.0 -Djboss.bind.address.management=0.0.0.0"
-# sysrc wildfly26_log_stdout="/dev/null"
-# sysrc wildfly26_log_stderr="/dev/null"
+# service wildfly enable
+# sysrc wildfly_args="-Djboss.bind.address=0.0.0.0 -Djboss.bind.address.management=0.0.0.0"
+# sysrc wildfly_log_stdout="/dev/null"
+# sysrc wildfly_log_stderr="/dev/null"
 ```
 
 然后启动服务：
 
 ```sh
-# service wildfly26 start
+# service wildfly start
 ```
 
 打开 `http://127.0.0.1:8080` 即可检验服务状态。
