--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.7-jie-python-yu-vscode.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.7-jie-python-yu-vscode.md
@@ -2,62 +2,46 @@
 
 ## Python
 
-在 FreeBSD 中，不同的 Python 版本被分开封装。意思是说，Python3.11 和 Python3.13 属于不同的包。就好像 `llvm11` 和 `llvm13` 那样。
+在 FreeBSD 中，不同的 Python 版本被分开封装。意思是说，Python3.11 和 Python3.13 属于不同的包。就如同 `llvm11` 和 `llvm13` 那样。
 
 但是，就目前的 FreeBSD 14 来说，支持最完整的 Python 是 Python 3.11。`pip` 与 `numpy` 之类的工具只有针对 `py311` 的打包。这也就是 `python3` 这个虚包指向的是 `python311` 的原因。否则你只能使用 ports。
 
-所以想要安装 Python，你需要这样做：
+所以想要安装 Python，你需要这样做。
+
+- 使用 pkg 安装：
 
 ```sh
 # pkg install python311 py311-pip
 ```
 
-当然你也可以通过：
+- 当然你也可以通过 Ports:
 
 ```sh
-# pkg install python313
+# cd /usr/ports/lang/python313/ && make install clean
+# cd /usr/ports/devel/py-pip/ && make install clean
 ```
 
-或者
-
-```sh
-# cd /usr/ports/lang/python313/ 
-# make install clean
-```
-
-```sh
-# cd /usr/ports/devel/py-pip/ 
-# make install clean
-```
-
-
-之类的命令来要求一个更新的 Python 版本。但是请记住，最新版本的 Python 版本在 FreeBSD 上可能没有那么完全。（需要使用 ports）
+之类的命令来要求一个更新的 Python 版本。但是请记住，最新版本的 Python 版本在 FreeBSD 上可能没有那么完全（需要使用 ports）。
 
 然而不管怎么说，这总好过某些 Linux 发行版，从来只维护一个 Python 版本，也不管这么做的后果是什么。
 
 ## VS Code
 
-在以前，FreeBSD 用户想要安装 VS Code 手动从 GitHub 上下载源码，自己配置 Electron 的编译环境，然后自己编译 VS Code。或者通过利用 Linux 兼容层的方式来直接运行 VS Code 的 RPM 包。
-
-但是自从 VS Code 进入 ports tree，进而进入 pkg repo 以后，用户可以不用那么折腾了。直接：
+- 使用 pkg 安装：
 
 ```sh
 # pkg install vscode
 ```
 
-或者
+- 或者使用 Ports：
 
 ```sh
 # cd /usr/ports/editors/vscode/ 
 # make install clean
 ```
 
-然后你就能写代码了。
-
-需要注意的是，通过这种方式获取到的 VS Code 其实是 Code - OSS。Code - OSS 和 VS Code 的区别将不在这里展开陈述，有兴趣的人可以自己[阅读原文](https://github.com/microsoft/vscode/wiki/Differences-between-the-repository-and-Visual-Studio-Code)。
+需要注意的是，通过这种方式获取到的 VS Code 其实是 [Code - OSS](https://github.com/microsoft/vscode)。Code - OSS 和 VS Code 的区别将不在这里展开陈述，有兴趣的人可以自己[阅读原文](https://github.com/microsoft/vscode/wiki/Differences-between-the-repository-and-Visual-Studio-Code)。主要是许可证不一样和可用的闭源资源不一样，类似 Chromium 和 Chrome 的关系。
 
 这里只想提一下，目前已知微软的 Python 插件，以及 LLVM 的 clangd 插件都能直接在 Code - OSS 运行，使用起来和 VS Code 没有任何区别。
-
-~~微软的 Remote Development 在 Code-OSS 也没有任何问题。~~
 
 设置同步服务看起来是不能用的。
